Add plugin upgrade support
