# cloud/api/types/plugin_upgrade_request.go
@@ -1,0 +1,64 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PluginUpgradeRequest Upgrade a plugin
+// swagger:model PluginUpgradeRequest
+type PluginUpgradeRequest struct {
+
+	// Version to upgrade to
+	// Required: true
+	Version *string `json:"version"`
+}
+
+// Validate validates this plugin upgrade request
+func (m *PluginUpgradeRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateVersion(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PluginUpgradeRequest) validateVersion(formats strfmt.Registry) error {
+
+	if err := validate.Required("version", "body", m.Version); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PluginUpgradeRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PluginUpgradeRequest) UnmarshalBinary(b []byte) error {
+	var res PluginUpgradeRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
